--- a/public/stylesheets/splash.css
+++ b/public/stylesheets/splash.css
@@ -37,12 +37,15 @@
 }
 
 #counter-text {
-	text-decoration:underline; 
+	text-decoration: underline; 
 	font-weight: bold; 
 	color: rgb(83, 0, 0);
 }
 
 #counter {
+	text-decoration: underline; 
+	font-weight: bold;
+	font-size: large;
 	color: white;
 }
 
