--- a/public/stylesheets/Style.css
+++ b/public/stylesheets/Style.css
@@ -102,3 +102,15 @@ button:hover{
 #fullscreen:hover {
   opacity: 50%;
 }
+
+#homepage, #supportlink {
+	color: rgb(151, 2, 2);
+}
+
+#homepage:hover {
+	color: black;
+}
+
+#supportlink:hover {
+	color: white;
+}
