--- a/public/stylesheets/contact.css
+++ b/public/stylesheets/contact.css
@@ -1,11 +1,19 @@
-@import 'Style.css';
 @import 'splash.css';
 
+#content {
+	font-weight: bold;
+}
 
-#contact-middle{
-	width:80%;
-	margin: auto;
-	text-align: center;
-	height: 100%;
-	
+#subtitle {
+	margin-left: 25%;
+}
+
+#guide {
+	margin-left:27%;
+	margin-right: 27%;
+}
+
+#sponsor {
+	margin-top: 5%;
+	margin-left: 25%;
 }
