--- a/views/game.ejs
+++ b/views/game.ejs
@@ -21,7 +21,8 @@
                     <div class="d-flex justify-content-between">
                         <div class="col-4">
                             <image src="images/logo.png" id="splash_logo">
-                            BATTLESHIP V
+                                <a href="/" id="homepage">Battleship V</a>
+                            </image> 
                         </div>
                         <div class="col-4">
                             <input id="fullscreen" src="images/expand.png" type="image">
@@ -158,7 +159,7 @@
             <div class="container-fluid">
                 <div class="row justify-content-around">
                   <div class="col-3"> &copy&nbspCopyright 2018-2020  | All rights reserved. </div>
-                  <div class="col-3"> Support us on patreon! </div>
+                  <div class="col-3"><a href="https://www.paypal.me/kef1n" id="supportlink">Support us on patreon!</a> </div>
                   <div class="col-3"> ... we need the money... </div>
                 </div>
               </div>
