--- a/views/shipplacement.ejs
+++ b/views/shipplacement.ejs
@@ -19,8 +19,10 @@
             <div class="body"> 
                 <header class="header container-fluid">
                     <div class="row justify-content-between">
-                        <div class="col-4"> 
-                            <image src="images/logo.png" id="splash_logo">Battleship V</image>
+                        <div class="col-4">
+                            <image src="images/logo.png" id="splash_logo">
+                                <a href="/" id="homepage">Battleship V</a>
+                            </image> 
                         </div>
                         <div class="col-4"> 
                             <input id="fullscreen" src="images/expand.png" type="image">
@@ -99,7 +101,7 @@
             <div class="container-fluid">
                 <div class="row justify-content-around">
                   <div class="col-3"> &copy&nbspCopyright 2018-2020  | All rights reserved. </div>
-                  <div class="col-3"> Support us on patreon! </div>
+                  <div class="col-3"><a href="https://www.paypal.me/kef1n" id="supportlink">Support us on patreon!</a> </div>
                   <div class="col-3"> ... we need the money... </div>
                 </div>
               </div>
