--- a/views/splash.ejs
+++ b/views/splash.ejs
@@ -18,8 +18,14 @@
             <div class="body">
                 <div class="header" class="container-fluid">
                     <div class="row justify-content-between">
-                        <div class="col-4"> <image src="images/logo.png" id="splash_logo">Battleship V</image> </div>
-                        <div class="col-4"> <a href="contact.html" id="guidelink">How-To-Play Guide</a> </div>
+                        <div class="col-4">
+                            <image src="images/logo.png" id="splash_logo">
+                                <a href="/" id="homepage">Battleship V</a>
+                            </image> 
+                        </div>
+                        <div class="col-2"> 
+                            <a href="contact.html" id="guidelink">How-To-Play Guide</a> 
+                        </div>
                     </div>
                 </div>
 
@@ -82,7 +88,7 @@
             <div class="container-fluid">
                 <div class="row justify-content-around">
                   <div class="col-3"> &copy&nbspCopyright 2018-2020  | All rights reserved. </div>
-                  <div class="col-3"> Support us on patreon! </div>
+                  <div class="col-3"><a href="https://www.paypal.me/kef1n" id="supportlink">Support us on patreon!</a> </div>
                   <div class="col-3"> ... we need the money... </div>
                 </div>
               </div>
