--- a/views/instructions.ejs
+++ b/views/instructions.ejs
@@ -9,6 +9,7 @@
         <link rel = "stylesheet"type = "text/css" href = "stylesheets/contact.css" />   
         <link rel="shortcut icon" type="image/png" href="images/favi.png"/>
 
+        <script type="text/javascript" src="javascripts/jquery.js"> </script>
         <link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.min.css">
         <script type="text/javascript" src="bootstrap/js/bootstrap.min.js"></script>
     </head>
