--- a/views/splash.ejs
+++ b/views/splash.ejs
@@ -17,7 +17,7 @@
                 <nav id="nav">
                     <h2>
                         <image src="images/logo.png" id="splash_logo">Battleship V</image>
-                        <a href="contact.html" id="how-to-button">How-To-Play Guide</a>
+                        <a href="instructions" id="how-to-button">How-To-Play Guide</a>
                     </h2>
                 </nav>
 
