--- a/public/stylesheets/error.css
+++ b/public/stylesheets/error.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #f4f4f4;
+    background-color: #181a1b;
 }
 
 .error {
@@ -10,12 +10,13 @@ body {
     position: relative;
     text-align: center;
     font-weight: bold;
-    color: darkred;
+    color: rgb(255, 107, 107);
     font-family: Arial, Helvetica, sans-serif;
     font-size: 50px;
 }
 
 .error h2 {
+    color: rgb(212, 211, 211);
     position: relative;
     text-align: center;
     font-weight: bold;
