DID SOME refactoring for assigning grid for players, changed the isGameStarted function checks whether the game is started, added comments of each message in game object as they belong to the methods that are being executed not the if statements for checking message type in initGame, CREATED SOUNDPLAYER CLASS to handle all the sound related data and playing the sounds and handle the volumes, fixed bug where the ongoing games is not decremented when a game end.

--- a/views/game.ejs
+++ b/views/game.ejs
@@ -172,6 +172,7 @@
         <script type="text/javascript" src="javascripts/localStorageHandler.js" ></script>
         <script type="text/javascript" src="javascripts/modifyNotification.js" ></script>
         <script type="text/javascript" src="javascripts/shipsRenderer.js"></script>
+        <script type="text/javascript" src="javascripts/soundPlayer.js"></script>
         <script type="text/javascript" src="javascripts/game.js"></script>
         <script type="text/javascript" src="javascripts/initGame.js"></script>
 
