--- a/views/splash.ejs
+++ b/views/splash.ejs
@@ -39,7 +39,7 @@
                                     Exited Games: <span id="counter"><%= exitedGames %></span> 
                                 </h4>
                                 <h4 id="counter-text">
-                                    Ongoing games: <span id="counter"><%= gamesInitialized %></span>
+                                    Ongoing games: <span id="counter"><%= gamesInit %></span>
                                 </h4>
                                 <h4 id="counter-text">
                                     Games completed: <span id="counter"><%= gamesCompleted %>
