--- a/views/splash.ejs
+++ b/views/splash.ejs
@@ -7,10 +7,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         
         <title>Battleship V: Battle Royale Edition</title>
-        <link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.min.css">
-        <link rel = "stylesheet"type = "text/css" href = "stylesheets/splash.css" />   
-        <script type="text/javascript" src="bootstrap/js/bootstrap.min.js"></script>
         <script type="text/javascript" src="javascripts/jquery.js"></script>
+        <link rel = "stylesheet"type = "text/css" href = "stylesheets/splash.css" />
+        <link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.min.css">
+        <script type="text/javascript" src="bootstrap/js/bootstrap.min.js"></script>
     </head>
 
     <body>
@@ -24,7 +24,7 @@
                             </image> 
                         </div>
                         <div class="col-2"> 
-                            <a href="contact.html" id="guidelink">How-To-Play Guide</a> 
+                            <a href="/instructions" id="guidelink">How-To-Play Guide</a> 
                         </div>
                     </div>
                 </div>
