some bug fixes with fullscreen script and created docker now to build the server.

--- a/views/game.ejs
+++ b/views/game.ejs
@@ -165,7 +165,7 @@
               </div>
         </footer>
 
-        <script type="text/javascript" src="javascripts/fullScreen.js"></script>
+        <script type="text/javascript" src="javascripts/FullScreen.js"></script>
         <script type="text/javascript" src="javascripts/statuses.js" ></script>
         <script type="text/javascript" src="javascripts/shared.js"></script>
         <script type="text/javascript" src="javascripts/messages.js"></script>
