--- a/views/shipplacement.ejs
+++ b/views/shipplacement.ejs
@@ -107,7 +107,7 @@
               </div>
         </footer>
 
-        <script type="text/javascript" src="javascripts/fullScreen.js"></script>
+        <script type="text/javascript" src="javascripts/FullScreen.js"></script>
         <script type="text/javascript" src="javascripts/localStorageHandler.js" ></script>
         <script type="text/javascript" src="javascripts/shared.js" ></script>
         <script type="text/javascript" src="javascripts/coordinate.js" ></script>
